# Monolithic-project

./: CMakeLists.txt  main.c
